Implementei a forma mais simples possível de gerar a grid de div's
Basicamente, tem uma função que dinamicamente gera as div's na tela,
em um modelo de grid.

Também criei um simples 'player' com controles baseados nas setas do
teclado, para testar coisas relacionadas a movimentação de uma div, e
possível código de colisão a ser utilizado no projeto do pathfinder.

// Dificuldades:

Não existe um acesso direto com JS para modificar a posição dos nodes
dentro da arvore DOM, isso deve ser feito utilizando o CSS.

E para tanto, deve-se descobrir os 'fatores' de conversão entre o CSS
e o JS (numericamente falando).

Depois de quebrar a cabeça bastante, acredito que cheguei em um fator
possivelmente usável, mas ai só testando com outros tamanhos de grid e
objetos (div).

- O mais complicado foi tentar criar o sistema de colisão entre a div
que representa o personagem, e as demais div's. Não consegui fazer
funcionar, mas tenho algumas ideias que vou pesquisar depois para tentar.

No mais, amanha quero ver se implemento o sistema de pathfinder mais
simples, para fazer o player se movimentar sozinho pelo cenário, e assim
ver se realmente vai ser necessário implementar o sistema de colisão.

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,9 @@ The following is taken from: https://www.joshwcomeau.com/css/custom-css-reset/
   /*
     2. Remove default margin
   */
+
   * {
+    box-sizing: border-box;
     margin: 0;
   }
   /*
