--- a/styles.css
+++ b/styles.css
@@ -7,49 +7,75 @@ The following is taken from: https://www.joshwcomeau.com/css/custom-css-reset/
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
-  }
-  /*
+}
+/*
     2. Remove default margin
   */
 
-  * {
+* {
     box-sizing: border-box;
     margin: 0;
-  }
-  /*
+}
+/*
     Typographic tweaks!
     3. Add accessible line-height
     4. Improve text rendering
   */
-  body {
-    font-family: 'Sriracha', sans-serif;  /* sans-serif is a fallback font */
+body {
+    font-family: "Sriracha", sans-serif; /* sans-serif is a fallback font */
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
-  }
-  /*
+}
+/*
     5. Improve media defaults
   */
-  img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
     display: block;
     max-width: 100%;
-  }
-  /*
+}
+/*
     6. Remove built-in form typography styles
   */
-  input, button, textarea, select {
+input,
+button,
+textarea,
+select {
     font: inherit;
-  }
-  /*
+}
+/*
     7. Avoid text overflows
   */
-  p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     overflow-wrap: break-word;
-  }
-  /*
+}
+/*
     8. Create a root stacking context
   */
-  #root, #__next {
+#root,
+#__next {
     isolation: isolate;
-  }
+}
+
+#balloon {
+    color: white;
+    background-color: rgb(108, 92, 73);
+    border: 1px solid black;
+    border-radius: 1rem;
+    padding: 5px;
+    max-width: 20rem;
+    text-wrap: pretty;
+}
